--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ img:is([sizes=auto i],[sizes^="auto," i]){contain-intrinsic-size:3000px 1500px}
 					<div  class="e-con-inner">
 				<div class="elementor-element elementor-element-3582f8f elementor-widget elementor-widget-heading" data-id="3582f8f" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h2 class="elementor-heading-title elementor-size-default">Tu mejor oportunidad de adelgazar por menos de <b>R$ 0,25 por día en 2026</b></h2>				</div>
+					<h2 class="elementor-heading-title elementor-size-default">Tu mejor oportunidad de adelgazar por menos de <b>€ 0,05 por día en 2026</b></h2>				</div>
 				</div>
 					</div>
 				</div>
@@ -709,15 +709,15 @@ img:is([sizes=auto i],[sizes^="auto," i]){contain-intrinsic-size:3000px 1500px}
 				</div>
 				<div class="elementor-element elementor-element-50b2e3c8 elementor-widget__width-inherit elementor-widget elementor-widget-heading" data-id="50b2e3c8" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<p class="elementor-heading-title elementor-size-default">De <s>R$ 197,00</s> por</p>				</div>
+					<p class="elementor-heading-title elementor-size-default">De <s>€ 37,00</s> por</p>				</div>
 				</div>
 				<div class="elementor-element elementor-element-7178f34e elementor-widget__width-inherit elementor-widget elementor-widget-heading" data-id="7178f34e" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<p class="elementor-heading-title elementor-size-default">12x de <b>R$1,90</b></p>				</div>
+					<p class="elementor-heading-title elementor-size-default">6x de <b>€0,90</b></p>				</div>
 				</div>
 				<div class="elementor-element elementor-element-7cf8f8a2 elementor-widget__width-inherit elementor-widget elementor-widget-heading" data-id="7cf8f8a2" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<p class="elementor-heading-title elementor-size-default">o R$ 27,90 al contado</p>				</div>
+					<p class="elementor-heading-title elementor-size-default">o € 4,90 al contado</p>				</div>
 				</div>
 				<div class="elementor-element elementor-element-6f7c1d9c elementor-align-center elementor-widget__width-inherit elementor-mobile-align-justify elementor-widget elementor-widget-button" data-id="6f7c1d9c" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
